@@ -1,3 +1,8 @@
+2005-08-07  Keith Packard  <keithp@keithp.com>
+
+	* ati_video.c: (RadeonDisplayVideo):
+	Build with modular X libraries and headers
+
 2005-06-09  Eric Anholt  <anholt@FreeBSD.org>
 
 	* ati.h:
